[package]
name = "usrs-xpad"
version = "0.1.0"
authors = ["Zan Skamljic <zan.skamljic@equaleyes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libusb = "0.3.0"
libc = "0.2.85"

[build-dependencies]
cc = "1.0.66"
